Bug 377790 - Missing images in Image List Report
Summary: Missing images in Image List Report
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.0.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-19 02:13 UTC by André Marcelo Alvarenga
Modified: 2017-03-25 01:44 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.0.2
Sentry Crash Report:


Attachments
Screenshot (145.12 KB, image/png)
2017-03-19 02:13 UTC, André Marcelo Alvarenga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description André Marcelo Alvarenga 2017-03-19 02:13:53 UTC
Created attachment 104637 [details]
Screenshot

See screenshot.
This report don't generate images anymore.

Manjaro Linux
Plasma: 5.9.3
Frameworks: 5.31
Comment 1 Robby Stephenson 2017-03-25 01:44:48 UTC
Git commit a8010ff1e585951c5cd42d2143bad7b676f34c2b by Robby Stephenson.
Committed on 25/03/2017 at 01:42.
Pushed by rstephenson into branch 'master'.

Fix bug with relative image location in reports

In fixing Bug 376134, the html link for relative image locations in the
Report Dialog was broken. Fix by checking for intent for the html to be
exported to a directed location (where the report dialog is not).
Also added a unit test
FIXED-IN: 3.0.2

M  +4    -0    ChangeLog
M  +1    -0    src/reportdialog.cpp
M  +13   -1    src/tests/htmlexportertest.cpp
M  +3    -1    src/translators/htmlexporter.cpp

https://commits.kde.org/tellico/a8010ff1e585951c5cd42d2143bad7b676f34c2b