Fix bug with relative image location in reports

In fixing Bug 376134, the html link for relative image locations in the
Report Dialog was broken. Fix by checking for intent for the html to be
exported to a directed location (where the report dialog is not).
Also added a unit test

BUG: 377790
FIXED-IN: 3.0.2